--- a/infrastructure/base/kustomization.yml
+++ b/infrastructure/base/kustomization.yml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-#resources:     #підключаємо маніфести що в infra/base
+resources: []     #підключаємо маніфести що в infra/base
