--- a/apps/overlays/dev/node-red/kustomization.yml
+++ b/apps/overlays/dev/node-red/kustomization.yml
@@ -4,8 +4,8 @@ kind: Kustomization
 namespace: service
 
 resources:
-  - ../../base/node-red
-#  - ../../base/test-app
-
-commonLabels:
-  env: dev
+  - ../../../base/node-red
+labels:
+  - includeSelectors: true
+    pairs:
+      env: dev
