--- a/clusters/aenv-k8s-dev/appset-dev.yml
+++ b/clusters/aenv-k8s-dev/appset-dev.yml
@@ -10,7 +10,7 @@ spec:
         revision: HEAD
         # Argo буде шукати кожну папку в overlays/dev/
         directories:
-          - path: apps/overlays/dev/*
+          - path: "apps/overlays/dev/*/updater-config.json"
   template:
     metadata:
       # Назва картки буде будуватися динамічно, наприклад: dev-node-red
