--- a/clusters/aenv-k8s-dev/appset-dev.yml
+++ b/clusters/aenv-k8s-dev/appset-dev.yml
@@ -36,6 +36,8 @@ spec:
       destination:
         server: 'https://kubernetes.default.svc'
       syncPolicy:
+        uiControl:
+          blockAutomatedSync: false
         automated:
           prune: true
           selfHeal: false
