--- a/infrastructure/base/kustomization.yml
+++ b/infrastructure/base/kustomization.yml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:     #підключаємо маніфести що в infra/base
-  - global-config.yaml
+resources:    #підключаємо маніфести що в infra/base
+  - updater-config.yml
+  - applicationset.yml
