--- a/infrastructure/base/applicationset.yml
+++ b/infrastructure/base/applicationset.yml
@@ -17,7 +17,7 @@ spec:
       project: default
       source:
         repoURL: https://github.com/Evogene1/test-argocd.git
-        targetRevision: HEAD
+        targetRevision: main
         path: '{{path}}'
       destination:
         server: https://kubernetes.default.svc
