--- a/infrastructure/base/kustomization.yml
+++ b/infrastructure/base/kustomization.yml
@@ -2,5 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:    #підключаємо маніфести що в infra/base
-  - updater-config.yml
-  - applicationset.yml
+  - argocd-image-updater/*
