--- a/apps/base/node-red/ingress.yml
+++ b/apps/base/node-red/ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: node-red
+  namespace: service
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
