--- a/apps/overlays/dev/nginx.yml
+++ b/apps/overlays/dev/nginx.yml
@@ -4,7 +4,7 @@ metadata:
   name: dev-nginx
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: nginx=nginx/nginx
+    argocd-image-updater.argoproj.io/image-list: nginx=nginx
     argocd-image-updater.argoproj.io/nginx.update-strategy: semver
     argocd-image-updater.argoproj.io/nginx.allow-tags: |
       regexp: ^1\.\d+\.\d+$
