--- a/apps/overlays/dev/node-red-app.yml
+++ b/apps/overlays/dev/node-red-app.yml
@@ -4,7 +4,7 @@ metadata:
   name: dev-node-red
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: my-alias=nodered/node-red
+    argocd-image-updater.argoproj.io/image-list: nodered/node-red
     argocd-image-updater.argoproj.io/my-alias.update-strategy: semver
     argocd-image-updater.argoproj.io/my-alias.allow-tags: |
       regexp: ^4\.\d+\.\d+$
